<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="addChildTitle">اضافة ابناء</string>
    <string name="addChildAccept_btn">اضافة </string>
    <string name="addChildCancel_btn">الغاء </string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="app_name">اكاديمية الاحتراف</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mainpage">mainpage</string>
    <string name="title_activity_sched">sched</string>
    <string name="title_activity_results">results</string>
    <string name="title_activity_activity">activity</string>
    <string name="title_activity_news">news</string>
    <string name="title_activity_complains">complains</string>
    <string name="title_activity_bus">bus</string>
    <string name="title_activity_exams">exams</string>
    <string name="title_activity_course">course</string>
    <string name="title_activity_busroute">busroute</string>
    <string name="title_activity_schedpage">schedpage</string>
    <string name="title_activity_calling">calling</string>
    <string name="title_activity_curentbus">curentbus</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_n1">n1</string>
    <string name="title_activity_n2">n2</string>
    <string name="title_activity_n3">n3</string>
    <string name="title_activity_advices">advices</string>
    <string-array name="classname">
        <item>الاول</item>
        <item>الثاني</item>
        <item>الثالث</item>
        <item>الرابع</item>
        <item>الخامس</item>
        <item>السادس</item>
        <item>السابع</item>
        <item>الثامن</item>
        <item>التاسع</item>
        <item>العاشر</item>
        <item>الاول ثانوي</item>
    </string-array>
    <string name="class1">الاول</string>
    <string name="class2">الثاني</string>
    <string name="class3">الثالث</string>
    <string name="class4">الرابع</string>
    <string name="class5">الخامس</string>
    <string name="class6">السادس</string>
    <string name="class7">السابع</string>
    <string name="class8">الثامن</string>
    <string name="class9">التاسع</string>
    <string name="class10">العاشر</string>
    <string name="class11">الاول ثانوي</string>
    <string name="firstName">الاسم الاول</string>
    <string name="lastName">اسم العائلة</string>
    <string name="Email">البريد الالكتروني</string>
    <string name="Gender">الجنس</string>
    <string name="Phone">رقم الهاتف</string>
    <string name="BD">تاريخ الميلاد</string>
    <string name="country">البلد</string>
    <string name="newNotificationTitle">اشعار جديد</string>
    <string name="BusTitle">الباصات</string>
    <string name="SchoolPrimaryColor">#6d19a2</string>
    <string name="buslisterror">هذه الصفحة غير متاحة حاليا يرجى الماولة لاحقا</string>
    <string name="Close">اغلاق</string>
    <string name="Error">خطأ</string>
    <string name="Register">تسجيل</string>
    <string name="activation">تم التفعيل بنجاح</string>
    <string-array name="semister">
        <item>الاول</item>
        <item>الثاني</item>
    </string-array>
    <string-array name="sections">
        <item>علمي</item>
        <item>ادارة معلوماتية</item>
    </string-array>
    <string-array name="section">
        <item>أ</item>
        <item>ب</item>
        <item>ج</item>
        <item>د</item>
        <item>ه</item>
        <item>و</item>
        <item>ز</item>
        <item>ح</item>
        <item>ط</item>
        <item>ي</item>
        <item>ك</item>
        <item>ل</item>
        <item>م</item>
        <item>ن</item>
    </string-array>
    <string-array name="gender">
        <item>ذكر</item>
        <item>انثى</item>
        <item>مختلط</item>
    </string-array>
    <string-array name="examType">
        <item>الامتحان الاول</item>
        <item>الامتحان الثاني</item>
        <item>الامتحان الثالث</item>
        <item>الامتحان النهائي</item>
    </string-array>
    <string-array name="operators">
        <item>79</item>
        <item>78</item>
        <item>77</item>
    </string-array>

</resources>
